[package]
name = "omsg"
version = "0.1.0"
edition = "2021"
authors = ["Tulip Protocol"]
description = "optimized message logging for solana programs which use string formatting"
license = "GPLv3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.8.5"
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
